modules/lib/dependencies/libvpx/cobalt_vpx_shim.h

#define COBALT_VPX_BAD_PARAM       (-1)
#define COBALT_VPX_NOMEM           (-2)
#define COBALT_VPX_IMG_WRAP_FAILED (-3)
/**
 * Returns the row stride, in bytes, of a decoded picture plane.
 *
 * Reads vpx_image_t.stride[plane] of the opaque picture handle. libvpx stores
 * the stride as a plain int, so no widening is needed.
 *
 * @param img   the picture handle from cobalt_vpx_decoder_get_frame.
 * @param plane one of COBALT_VPX_PLANE_Y / _U / _V.
 * @return the plane stride in bytes, or 0 for a NULL handle or out-of-range plane.
 */
int32_t cobalt_vpx_img_stride(void *img, int32_t plane);
/**
 * Returns the displayed width, in pixels, of a decoded picture.
 *
 * Reads vpx_image_t.d_w of the opaque picture handle.
 *
 * @param img the picture handle from cobalt_vpx_decoder_get_frame.
 * @return the picture width in pixels, or 0 for a NULL handle.
 */
int32_t cobalt_vpx_img_width(void *img);
/**
 * Returns the displayed height, in pixels, of a decoded picture.
 *
 * Reads vpx_image_t.d_h of the opaque picture handle.
 *
 * @param img the picture handle from cobalt_vpx_decoder_get_frame.
 * @return the picture height in pixels, or 0 for a NULL handle.
 */
int32_t cobalt_vpx_img_height(void *img);
/**
 * Destroys a decoder created by cobalt_vpx_decoder_create and frees its handle.
 *
 * Calls vpx_codec_destroy on the wrapped context and frees the heap-allocated
 * handle. Must be called at most once per handle. A NULL handle is ignored and
 * reported as success.
 *
 * @param ctx the decoder handle, or NULL.
 * @return COBALT_VPX_OK on success, otherwise the libvpx vpx_codec_err_t from
 *         vpx_codec_destroy.
 */
int32_t cobalt_vpx_decoder_destroy(void *ctx);
/**
 * Returns a textual description of a status code returned by this shim.
 *
 * For a positive libvpx vpx_codec_err_t the description is libvpx's own from
 * vpx_codec_err_to_string; for the negative shim-level codes it is a fixed
 * shim string; for an unrecognized value it is "unknown". The returned pointer
 * is static and must not be freed.
 *
 * @param err a status code returned by another cobalt_vpx_* function.
 * @return a NUL-terminated, statically-allocated description.
 */
const char *cobalt_vpx_strerror(int32_t err);